# pressf

./: .gitignore  COMPARISON.md  CONTRIBUTING.md  PLAN.md  README.md  SECURITY.md  design-qa.md  docker-compose.yaml  pressf.command  pyproject.toml  review.command
.github/workflows/: ci.yml  publish-pypi.yml
app/: DESIGN.md  DOCS.md  RELEASE.md  package-lock.json  package.json  playwright.config.ts  tsconfig.main.json  vite.config.ts  vitest.config.ts
app/assets/: icon.icns
demo/: qa.jsonl
demo-agent/: GUIDELINES.md  README.md  lazy.yaml  traces.jsonl
demo-openai/: GUIDELINES.md  lazy.yaml
demo-openai/data/: examples.jsonl  ingest_report.md  verdicts.jsonl
demo-project/: GUIDELINES.md  lazy.yaml
demo-project/data/: examples.jsonl  ingest_report.md
docs/: agent-trajectory.md  cli.md  desktop.md  retrievers.md
pressf/: __init__.py  cli.py  config.py  embeddings.py  io.py  schemas.py  scoring.py  stats.py  wizard.py
tests/: conftest.py  test_adapters_parsing.py  test_agent_trajectory.py  test_aggregate.py  test_batch.py  test_bot.py  test_calibrate.py  test_cli_coverage.py  test_compare_versions_task.py  test_config.py  test_dialog_kappa.py  test_export.py  test_export_extras.py  test_gate_traces.py  test_http_and_loaders_coverage.py  test_ingest.py  test_judge.py  test_openai_compatible.py  test_openai_judge.py  test_policy_task.py  test_retrieval_metrics.py  test_retriever_adapter_coverage.py  test_retrievers.py  test_schemas.py  test_search_quality_task.py  test_selfcheck.py  test_session.py  test_stats.py  test_tui_coverage.py  test_wizard.py
(+74 files in other folders)
